--- a/package.json
+++ b/package.json
@@ -1,20 +1,31 @@
 {
-  "name": "cars-ui",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.27",
-    "@types/react": "^17.0.2",
-    "typescript": "^4.1.5"
-  }
+    "name": "cars-ui",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "type-check": "tsc --project tsconfig.json --pretty --noEmit",
+        "lint": "eslint --ext js,jsx,ts,tsx --fix"
+    },
+    "dependencies": {
+        "next": "10.0.6",
+        "react": "17.0.1",
+        "react-dom": "17.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.27",
+        "@types/react": "^17.0.2",
+        "@typescript-eslint/eslint-plugin": "^4.15.0",
+        "@typescript-eslint/parser": "^4.15.0",
+        "eslint": "^7.20.0",
+        "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
+        "prettier": "^2.2.1",
+        "typescript": "^4.1.5"
+    }
 }
