--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
         "lint": "eslint --ext js,jsx,ts,tsx --fix"
     },
     "dependencies": {
+        "axios": "^0.21.1",
+        "camelcase-keys": "^6.2.2",
         "next": "10.0.6",
         "react": "17.0.1",
-        "react-dom": "17.0.1"
+        "react-dom": "17.0.1",
+        "snakecase-keys": "^3.2.1",
+        "swr": "^0.4.2"
     },
     "devDependencies": {
         "@types/node": "^14.14.27",
