--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "dependencies": {
         "axios": "^0.21.1",
         "camelcase-keys": "^6.2.2",
-        "next": "10.0.6",
+        "next": "^10.0.7",
         "react": "17.0.1",
         "react-dom": "17.0.1",
         "snakecase-keys": "^3.2.1",
         "swr": "^0.4.2"
     },
     "devDependencies": {
-        "@types/node": "^14.14.27",
+        "@types/node": "^14.14.31",
         "@types/react": "^17.0.2",
-        "@typescript-eslint/eslint-plugin": "^4.15.0",
-        "@typescript-eslint/parser": "^4.15.0",
+        "@typescript-eslint/eslint-plugin": "^4.15.2",
+        "@typescript-eslint/parser": "^4.15.2",
         "eslint": "^7.20.0",
-        "eslint-config-prettier": "^7.2.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
-        "husky": "^5.0.9",
+        "husky": "^5.1.1",
         "lint-staged": "^10.5.4",
         "prettier": "^2.2.1",
-        "typescript": "^4.1.5"
+        "typescript": "^4.2.2"
     }
 }
