--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "lint": "eslint --ext js,jsx,ts,tsx --fix"
     },
     "dependencies": {
+        "@hookform/resolvers": "^1.3.5",
         "axios": "^0.21.1",
         "camelcase-keys": "^6.2.2",
         "next": "^10.0.7",
         "react": "17.0.1",
         "react-dom": "17.0.1",
+        "react-hook-form": "^6.15.4",
         "snakecase-keys": "^3.2.1",
-        "swr": "^0.4.2"
+        "swr": "^0.4.2",
+        "yup": "^0.32.9"
     },
     "devDependencies": {
         "@types/node": "^14.14.31",
